[gd_scene load_steps=38 format=3 uid="uid://urdof6843spx"]

[ext_resource type="Script" path="res://enemies/default/scripts/enemy.gd" id="1_almdc"]
[ext_resource type="Texture2D" uid="uid://dwx378c3wqvhg" path="res://enemies/default/sprites/slime_green_sheet.png" id="2_q0vaq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hme8i"]
radius = 129.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7u4ej"]
radius = 246.073

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_07eu4"]
radius = 5.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0hc1j"]
atlas = ExtResource("2_q0vaq")
region = Rect2(256, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7g1vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hc1j")
}],
"loop": false,
"name": &"shadow",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqvyr"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_to5ms"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f5oy"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3axqw"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56lcc"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iacf"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yhll"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ejxa"]
atlas = ExtResource("2_q0vaq")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwcas"]
atlas = ExtResource("2_q0vaq")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmwqe"]
atlas = ExtResource("2_q0vaq")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_123qe"]
atlas = ExtResource("2_q0vaq")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbut5"]
atlas = ExtResource("2_q0vaq")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxdqf"]
atlas = ExtResource("2_q0vaq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fclgc"]
atlas = ExtResource("2_q0vaq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ngt"]
atlas = ExtResource("2_q0vaq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekcmk"]
atlas = ExtResource("2_q0vaq")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcxw0"]
atlas = ExtResource("2_q0vaq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmd65"]
atlas = ExtResource("2_q0vaq")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3047o"]
atlas = ExtResource("2_q0vaq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nhdx"]
atlas = ExtResource("2_q0vaq")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwnru"]
atlas = ExtResource("2_q0vaq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8la0"]
atlas = ExtResource("2_q0vaq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh4aw"]
atlas = ExtResource("2_q0vaq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkojr"]
atlas = ExtResource("2_q0vaq")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx2kj"]
atlas = ExtResource("2_q0vaq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur3wn"]
atlas = ExtResource("2_q0vaq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl4w6"]
atlas = ExtResource("2_q0vaq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvvxp"]
atlas = ExtResource("2_q0vaq")
region = Rect2(64, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_psmje"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqvyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to5ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f5oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3axqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56lcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iacf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yhll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ejxa")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwcas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmwqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_123qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmwqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwcas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmwqe")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_123qe")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_jbut5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmwqe")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxdqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fclgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ngt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekcmk")
}],
"loop": true,
"name": &"walking_east",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcxw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmd65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3047o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nhdx")
}],
"loop": true,
"name": &"walking_north",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwnru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8la0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh4aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkojr")
}],
"loop": true,
"name": &"walking_south",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx2kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur3wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl4w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvvxp")
}],
"loop": true,
"name": &"walking_west",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3jcgu"]
radius = 6.0
height = 14.0

[node name="slime_green" type="CharacterBody2D" node_paths=PackedStringArray("target") groups=["enemies"]]
y_sort_enabled = true
position = Vector2(0, -5)
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_almdc")
target = NodePath(".")

[node name="detection_area" type="Area2D" parent="."]

[node name="detection" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_hme8i")
debug_color = Color(0.756863, 0, 0.12549, 0)

[node name="limit_area" type="Area2D" parent="."]

[node name="limit" type="CollisionShape2D" parent="limit_area"]
z_index = -1
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_7u4ej")
debug_color = Color(1, 0.803922, 0.811765, 0)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_07eu4")
debug_color = Color(0, 0.6, 0.701961, 0.203922)

[node name="shadow" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.560784)
z_index = -1
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_7g1vg")
animation = &"shadow"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_psmje")
animation = &"idle"
frame_progress = 0.69428

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 14.0
max_speed = 35.0
debug_enabled = true
debug_path_custom_color = Color(0.811765, 0.560784, 0.823529, 0.0235294)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3jcgu")
debug_color = Color(0.996078, 0, 0.137255, 0.301961)

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="limit_area" to="." method="_on_limit_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_entered" from="hitbox" to="." method="_on_damage_arrow_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
